// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee acp --help 1`] = `
"coderrupee acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: coderrupee.local)
                                                                [string] [default: "coderrupee.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee mcp --help 1`] = `
"coderrupee mcp

manage MCP (Model Context Protocol) servers

Commands:
  coderrupee mcp add [name]     add an MCP server
  coderrupee mcp list           list MCP servers and their status                        [aliases: ls]
  coderrupee mcp auth [name]    authenticate with an OAuth-enabled MCP server
  coderrupee mcp logout [name]  remove OAuth credentials for an MCP server
  coderrupee mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee attach --help 1`] = `
"coderrupee attach <url>

attach to a running coderrupee server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to CODERRUPEE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to CODERRUPEE_SERVER_USERNAME or 'coderrupee')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee run --help 1`] = `
"coderrupee run [message..]

run coderrupee with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
      --share        share the session                                                     [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running coderrupee server (e.g., http://localhost:4096)      [string]
  -p, --password     basic auth password (defaults to CODERRUPEE_SERVER_PASSWORD)             [string]
  -u, --username     basic auth username (defaults to CODERRUPEE_SERVER_USERNAME or 'coderrupee')
                                                                                            [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee debug --help 1`] = `
"coderrupee debug

debugging and troubleshooting tools

Commands:
  coderrupee debug config        show resolved configuration
  coderrupee debug lsp           LSP debugging utilities
  coderrupee debug rg            ripgrep debugging utilities
  coderrupee debug file          file system debugging utilities
  coderrupee debug scrap         list all known projects
  coderrupee debug skill         list all available skills
  coderrupee debug snapshot      snapshot debugging utilities
  coderrupee debug startup       print startup timing
  coderrupee debug agent <name>  show agent configuration details
  coderrupee debug v2            debug v2 catalog and built-in plugins
  coderrupee debug info          show debug information
  coderrupee debug paths         show global paths (data, config, cache, state)
  coderrupee debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee providers --help 1`] = `
"coderrupee providers

manage AI providers and credentials

Commands:
  coderrupee providers list               list providers and credentials                 [aliases: ls]
  coderrupee providers login [url]        log in to a provider
  coderrupee providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee agent --help 1`] = `
"coderrupee agent

manage agents

Commands:
  coderrupee agent create  create a new agent
  coderrupee agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee upgrade --help 1`] = `
"coderrupee upgrade [target]

upgrade coderrupee to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee uninstall --help 1`] = `
"coderrupee uninstall

uninstall coderrupee and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee serve --help 1`] = `
"coderrupee serve

starts a headless coderrupee server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: coderrupee.local)
                                                                [string] [default: "coderrupee.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee web --help 1`] = `
"coderrupee web

start coderrupee server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: coderrupee.local)
                                                                [string] [default: "coderrupee.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee models --help 1`] = `
"coderrupee models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee stats --help 1`] = `
"coderrupee stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee export --help 1`] = `
"coderrupee export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee import --help 1`] = `
"coderrupee import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee github --help 1`] = `
"coderrupee github

manage GitHub agent

Commands:
  coderrupee github install  install the GitHub agent
  coderrupee github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee pr --help 1`] = `
"coderrupee pr <number>

fetch and checkout a GitHub PR branch, then run coderrupee

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee session --help 1`] = `
"coderrupee session

manage sessions

Commands:
  coderrupee session list                list sessions
  coderrupee session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee plugin --help 1`] = `
"coderrupee plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee db --help 1`] = `
"coderrupee db

database tools

Commands:
  coderrupee db [query]     open an interactive sqlite3 shell or run a query                 [default]
  coderrupee db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee mcp list --help 1`] = `
"coderrupee mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee mcp add --help 1`] = `
"coderrupee mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee mcp auth --help 1`] = `
"coderrupee mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  coderrupee mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee mcp logout --help 1`] = `
"coderrupee mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee providers list --help 1`] = `
"coderrupee providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee providers login --help 1`] = `
"coderrupee providers login [url]

log in to a provider

Positionals:
  url  coderrupee auth provider                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee providers logout --help 1`] = `
"coderrupee providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee agent create --help 1`] = `
"coderrupee agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee agent list --help 1`] = `
"coderrupee agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee session list --help 1`] = `
"coderrupee session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee session delete --help 1`] = `
"coderrupee session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee github install --help 1`] = `
"coderrupee github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee github run --help 1`] = `
"coderrupee github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`coderrupee CLI help-text snapshots every documented command emits stable help text: coderrupee db path --help 1`] = `
"coderrupee db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
